--- a/homework/src/style.css
+++ b/homework/src/style.css
@@ -1,3 +1,91 @@
+body {
+  margin-left: auto;
+  margin-right: auto;
+  background-color: whitesmoke;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 0;
+  color: lightslategray;
+}
+
 .alert-error {
-    color: red;
+  color: red;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: rgba(3, 53, 68, 0.753);
+  padding: 1em;
+
+}
+
+h1 {
+  color: rgb(255, 255, 255);
+}
+
+nav > select {
+  margin-left: 20em;
+  width: 250px;
+  padding: 5px 35px 5px 5px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  height: 34px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: url(https://avatars2.githubusercontent.com/u/20858568?s=280&v=4) 96% / 15% no-repeat #eee;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+.repo_info,
+.contributors {
+  background-color: white;
+  margin: 1em 0.5em 1em 0.5em;
+  padding: 1em 0.5em 1em 0.5em;
+  border-radius: 0.2em;
+}
+
+.contributor-name {
+  text-decoration: none;
+  font-weight: bold;
+}
+ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;  
+  align-items: center;
+}
+ul > li {
+  
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+img {
+  border-radius: 50%;
+  width: 5em;
+}
+
+/* responsive design */
+@media (min-width: 768px) {
+  #container {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    color: lightslategray;
+  }
+  .infoBox,
+  .contributorBox {
+    background-color: white;
+    flex: 1;
+    margin: 1em 0.5em 1em 0.5em;
+    padding: 1em 0.5em 1em 0.5em;
+    border-radius: 0.2em;
+  }
 }
